add other pages and nav between pages

--- a/page-3.html
+++ b/page-3.html
@@ -12,8 +12,9 @@
 </head>
 <body onload="initalizeAndLoad(2016)">
   <div id="title-div">
-    <h1>The Rise of the French Bulldog</h1>
-    <button class="nav-button" id="next" page="page-2.html">Next Page</button>
+    <h1>This is page 3!</h1>
+    <button class="nav-button" id="prev" page="page-2.html">Previous Page</button>
+    <button class="nav-button" id="next" page="explore.html">Next Page</button>
   </div>
   <div id="svg-div">
     <svg>    
