--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <button class="nav-button" id="next" page="page-2.html">Next Page</button>
   </div>
   <div id="main-body-div">
+    <div id="axis-div" width="50">
+      <svg id="axis-svg">
+      </svg>
+    </div>
     <div id="svg-div">
-      <svg>    
+      <svg id="chart-svg">    
       </svg>
     </div>
     <div id="description-div">
