better directory structure

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">  
   <script src='https://d3js.org/d3.v5.min.js'></script>
-  <script type="text/javascript" src="d3-annotation.js"></script>  
-  <script type="text/javascript" src="data-functions.js"></script>
-  <script type="text/javascript" src="nav-functions.js"></script>
-  <link rel="stylesheet" href="main-pages.css">
+  <script type="text/javascript" src="javascript/d3-annotation.js"></script>  
+  <script type="text/javascript" src="javascript/data-functions.js"></script>
+  <script type="text/javascript" src="javascript/nav-functions.js"></script>
+  <link rel="stylesheet" href="css/main-pages.css">
   <title>Explore the Rankings</title>
   <style> rect {fill: pink}
   </style>
@@ -14,7 +14,8 @@
 <body onload="initalizeAndLoad(2016)">
   <div id="header-div">
     <h1>The Rise of the French Bulldog</h1>
-    <button class="nav-button" id="next" page="page-2.html">Next Page</button>
+    <button class="nav-button" id="next" page="pages/page-2.html">Next Page</button>
+    <h2>2016</h2>
   </div>
   <div id="main-body-div">
     <div id="axis-div" width="50">
