--- a/pages/page-2.html
+++ b/pages/page-2.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">  
   <script src='https://d3js.org/d3.v5.min.js'></script>
-  <script type="text/javascript" src="d3-annotation.js"></script>  
-  <script type="text/javascript" src="data-functions.js"></script>
-  <script type="text/javascript" src="nav-functions.js"></script>
+  <script type="text/javascript" src="../javascript/d3-annotation.js"></script>  
+  <script type="text/javascript" src="../javascript/data-functions.js"></script>
+  <script type="text/javascript" src="../javascript/nav-functions.js"></script>
+  <link rel="stylesheet" href="../css/main-pages.css">
   <title>Explore the Rankings</title>
   <style> rect {fill: pink}
   </style>
@@ -13,7 +14,7 @@
 <body onload="initalizeAndLoad(2020)">
   <div id="title-div">
     <h1>This is page 2!</h1>
-    <button class="nav-button" id="prev" page="index.html">Previous Page</button>
+    <button class="nav-button" id="prev" page="../index.html">Previous Page</button>
     <button class="nav-button" id="next" page="page-3.html">Next Page</button>
   </div>
   <div id="svg-div">
