--- a/pages/explore.html
+++ b/pages/explore.html
@@ -12,14 +12,23 @@
   </style>
 </head>
 <body onload="initalizeAndLoad(2016)">
-  <div id="title-div">
+  <div id="header-div">
     <h1>Here's some exploration</h1>
     <button class="nav-button" id="prev" page="page-3.html">Previous Page</button>
     <button class="nav-button" id="next" page="../index.html">Restart</button>
   </div>
-  <div id="svg-div">
-    <svg>    
-    </svg>
+  <div id="main-body-div">
+    <div id="axis-div" width="50">
+      <svg id="axis-svg">
+      </svg>
+    </div>
+    <div id="svg-div">
+      <svg id="chart-svg">    
+      </svg>
+    </div>
+    <div id="description-div">
+      <p>Here's some text about other stuff!  I want it to be on the side</p>
+    </div>
   </div>
   <script>
     const navButtons = document.getElementsByClassName("nav-button") 
