separate function for annotations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style> rect {fill: pink}
   </style>
 </head>
-<body onload="initalizeAndLoad(2016)">
+<body onload="initializeDataAndCreateAnnotations(2016)">
   <div id="header-div">
     <h1>The Rise of the French Bulldog</h1>
     <button class="nav-button" id="next" page="pages/page-2.html">Next Page</button>
