--- a/pages/page-3.html
+++ b/pages/page-3.html
@@ -11,7 +11,7 @@
   <style> rect {fill: pink}
   </style>
 </head>
-<body onload="initalizeAndLoad(2022)">
+<body onload="initializeDataAndCreateAnnotations(2022)">
   <div id="header-div">
     <h1>This is page 3!</h1>
     <button class="nav-button" id="prev" page="page-2.html">Previous Page</button>
