--- a/pages/page-2.html
+++ b/pages/page-2.html
@@ -11,7 +11,7 @@
   <style> rect {fill: pink}
   </style>
 </head>
-<body onload="initalizeAndLoad(2020)">
+<body onload="initializeDataAndCreateAnnotations(2020)">
   <div id="header-div">
     <h1>This is page 2!</h1>
     <button class="nav-button" id="prev" page="../index.html">Previous Page</button>
