update build axis

--- a/pages/explore.html
+++ b/pages/explore.html
@@ -39,9 +39,10 @@
       <button class="year-button" onclick="moveYearRanking(2021)">2021</button>
       <button class="year-button" onclick="moveYearRanking(2022)">2022</button>
     </fieldset>
+    <h2 id="explore-year-display"></h2>
   </div>
   <div id="main-body-div">
-    <div id="axis-div" width="50">
+    <div id="axis-div">
       <svg id="axis-svg">
       </svg>
     </div>
