--- a/pages/page-3.html
+++ b/pages/page-3.html
@@ -19,7 +19,7 @@
     <h2>2022</h2>
   </div>
   <div id="main-body-div">
-    <div id="axis-div" width="50">
+    <div id="axis-div">
       <svg id="axis-svg">
       </svg>
     </div>
