--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>2016</h2>
   </div>
   <div id="main-body-div">
-    <div id="axis-div" width="50">
+    <div id="axis-div">
       <svg id="axis-svg">
       </svg>
     </div>
