--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
   <script type="text/javascript" src="javascript/nav-functions.js"></script>
   <link rel="stylesheet" href="css/main-pages.css">
   <title>Explore the Rankings</title>
-  <style> rect {fill: pink}
-  </style>
 </head>
 <body onload="initializeDataAndCreateAnnotations(2016)">
   <div id="header-div">
     <h1>The Rise of the French Bulldog</h1>
     <button class="nav-button" id="next" page="pages/page-2.html">Next Page</button>
-    <h2>2016</h2>
+    <h2>AKC Breed Ranking of 2016</h2>
   </div>
   <div id="main-body-div">
     <div id="axis-div">
@@ -27,7 +25,10 @@
       </svg>
     </div>
     <div id="description-div">
-      <p>Here's some text about other stuff!  I want it to be on the side</p>
+      <h2>Large Breed Dominance</h2>
+      <p>The American Kennel Club releases yearly rankings of the popularity of each recognized breed, quantified by the number of registrations of the breed for that year.</p>
+      <p>The most popular breeds are generally "family-friendly" large-breed dogs - energetic and friendly, good with kids and families, but often needing large amounts of space and exercise.</p>
+      <p>Referred to as "America's Dog", the Labrador Retriever has been the record-holder for the most popular breed, grabbing Number One position in the breed ranking since 1991.</p>
     </div>
   </div>
   <script>
