--- a/pages/page-2.html
+++ b/pages/page-2.html
@@ -8,15 +8,13 @@
   <script type="text/javascript" src="../javascript/nav-functions.js"></script>
   <link rel="stylesheet" href="../css/main-pages.css">
   <title>Explore the Rankings</title>
-  <style> rect {fill: pink}
-  </style>
 </head>
 <body onload="initializeDataAndCreateAnnotations(2020)">
   <div id="header-div">
-    <h1>This is page 2!</h1>
+    <h1>The Rise of the French Bulldog</h1>
     <button class="nav-button" id="prev" page="../index.html">Previous Page</button>
     <button class="nav-button" id="next" page="page-3.html">Next Page</button>
-    <h2>2020</h2>
+    <h2>AKC Breed Ranking of 2020</h2>
   </div>
   <div id="main-body-div">
     <div id="axis-div">
@@ -28,7 +26,10 @@
       </svg>
     </div>
     <div id="description-div">
-      <p>Here's some text about other stuff!  I want it to be on the side</p>
+      <h2>The French Bulldog's Meteoric Rise</h2>
+      <p>First making it into the Top 5 in 2017, it takes only 3 years for the French Bulldog to start nipping at the Labrador Retriever's heels in the number 2 position.</p>
+      <p>The smallest dogs in the Top 5, Frenchies are jam-packed full of playful, goofy personality.  Their small size makes them fantastic city dogs, and their outgoing nature means that they are usually great with kids and other dogs alike.</p>
+      <p>Rounding out the top 5, the Golden Retriever, German Shepherd Dog, and English Bulldog maintain their popularity.</p>
     </div>
   </div>
   <script>
