--- a/pages/page-3.html
+++ b/pages/page-3.html
@@ -8,15 +8,13 @@
   <script type="text/javascript" src="../javascript/nav-functions.js"></script>
   <link rel="stylesheet" href="../css/main-pages.css">
   <title>Explore the Rankings</title>
-  <style> rect {fill: pink}
-  </style>
 </head>
 <body onload="initializeDataAndCreateAnnotations(2022)">
   <div id="header-div">
-    <h1>This is page 3!</h1>
+    <h1>The Rise of the French Bulldog</h1>
     <button class="nav-button" id="prev" page="page-2.html">Previous Page</button>
     <button class="nav-button" id="next" page="explore.html">Next Page</button>
-    <h2>2022</h2>
+    <h2>AKC Breed Ranking of 2022</h2>
   </div>
   <div id="main-body-div">
     <div id="axis-div">
@@ -28,7 +26,10 @@
       </svg>
     </div>
     <div id="description-div">
-      <p>Here's some text about other stuff!  I want it to be on the side</p>
+      <h2>Frenchie Dominance</h2>
+      <p>Beating out the Labrador Retriever, the heavyweight champ the AKC rankings, the French Bulldog becomes the most popular dog breed in America in 2022!</p>
+      <p>This is the Frenchie's first time in the top spot, with registrations increasing by over 1,000% since 2012, when it was ranked 14th.  Small, friendly, and adaptable, it's no surprise that the popularity of the French Bulldog rose in conjunction with increased adoptions during COVID.</p>
+      <p>Will it continue to reign supreme?  Check back next year when the AKC releases the 2023 rankings!</p>
     </div>
   </div>
   <script>
