--- a/pages/explore.html
+++ b/pages/explore.html
@@ -8,14 +8,13 @@
   <script type="text/javascript" src="../javascript/nav-functions.js"></script>
   <link rel="stylesheet" href="../css/main-pages.css">
   <title>Explore the Rankings</title>
-  <style> rect {fill: pink}
-  </style>
 </head>
 <body onload="initializeAndLoadData(2016)">
   <div id="header-div">
-    <h1>Here's some exploration</h1>
+    <h1>Explore the Rankings!</h1>
     <button class="nav-button" id="prev" page="page-3.html">Previous Page</button>
     <button class="nav-button" id="next" page="../index.html">Restart</button>
+    <h2>Explore the rankings by year or different set of top ranks, or select a breed to learn more!</h2>
   </div>
   <div id="explore-div">
     <fieldset class="explore-fieldset">
@@ -41,7 +40,7 @@
     </fieldset>
     <h2 id="explore-year-display"></h2>
   </div>
-  <div id="main-body-div">
+  <div id="main-body-div-explore">
     <div id="axis-div">
       <svg id="axis-svg">
       </svg>
@@ -51,8 +50,9 @@
       </svg>
     </div>
     <div id="description-div">
-      <p>Here's some text about other stuff!  I want it to be on the side</p>
+      <p>Select a breed to find out more about it!</p>
     </div>
+    <div id="other-div"></div>
   </div>
   <script>
     const navButtons = document.getElementsByClassName("nav-button") 
