--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p>The American Kennel Club releases yearly rankings of the popularity of each recognized breed, quantified by the number of registrations of the breed for that year.</p>
       <p>The most popular breeds are generally "family-friendly" large-breed dogs - energetic and friendly, good with kids and families, but often needing large amounts of space and exercise.</p>
       <p>Referred to as "America's Dog", the Labrador Retriever has been the record-holder for the most popular breed, grabbing Number One position in the breed ranking since 1991.</p>
+      <p>2016 is the last year that the French Bulldog is below the Top 5, and is typical of previous years, with mostly large breed dogs in the top rankings.</p>
     </div>
   </div>
   <script>
